--- a/kc-users-management/src/css/quasar.variables.scss
+++ b/kc-users-management/src/css/quasar.variables.scss
@@ -12,9 +12,9 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+$primary   : #188792;
+$secondary : #0b4e48;
+$accent    : #ff9800;
 
 $dark      : #1D1D1D;
 $dark-page : #121212;
